--- a/notification-producer/build.gradle
+++ b/notification-producer/build.gradle
@@ -32,6 +32,7 @@ dependencies {
 	implementation 'org.springframework.integration:spring-integration-http'
 	implementation 'org.springframework.integration:spring-integration-jdbc'
 	implementation 'org.springframework.integration:spring-integration-jpa'
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'org.postgresql:postgresql'
 	annotationProcessor 'org.projectlombok:lombok'
