--- a/notification-producer/src/main/resources/application.yml
+++ b/notification-producer/src/main/resources/application.yml
@@ -5,7 +5,10 @@ spring:
     password: postgres
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create-drop
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
+notification:
+  default:
+    expiration: 3
